깃허브과제

--- a/깃허브 페이지 과제/github.html
+++ b/깃허브 페이지 과제/github.html
@@ -1,125 +1,191 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="./favicon.svg">
-    <title>GitHub · Build and ship software on a single, collaborative platform · GitHub</title>
-    <link rel="stylesheet" href="index.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GitHub</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+    }
+
+    .header-section {
+      background-color: #24292e;
+      color: white;
+      padding: 50px;
+    }
+
+    .header-section .nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      max-width: 1200px;
+    }
+
+    .header-section .nav img {
+      width: 32px;
+      height: 32px;
+    }
+
+    .header-section .nav div {
+      margin-left: 20px;
+      cursor: pointer;
+    }
+
+    .header-section .search {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .header-section .search input {
+      padding: 5px 10px;
+      border-radius: 5px;
+      border: none;
+      background-color: #444d56;
+      color: white;
+    }
+
+    .header-section .search input::placeholder {
+      color: #ddd;
+    }
+
+    .header-section .search button {
+      padding: 5px 15px;
+      background-color: transparent;
+      border: 1px solid white;
+      border-radius: 5px;
+      color: white;
+      cursor: pointer;
+    }
+
+    .content {
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 30px;
+      padding: 50px 20px;
+      background-color: #24292e;
+      color: white;
+    }
+
+    .content .text-wrapper {
+      max-width: 500px;
+      font-size: 25px;
+    }
+
+    .content .signup-box {
+      background-color: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      color: black;
+      max-width: 400px;
+    }
+
+    .note {
+        font-size: 15px;
+        color: #677481;
+    }
+
+    .note2 {
+        font-size: 15px;
+        color: #677481;
+    }
+    
+    .content .signup-box input {
+      width: 100%;
+      margin-bottom: 10px;
+      padding: 8px;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+    }
+
+    .content .signup-box button {
+      width: 100%;
+      padding: 10px;
+      background-color: #28a745;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .footer-section {
+      background-color: white;
+      text-align: center;
+      padding: 20px;
+      position: relative;
+    }
+
+    .menu {
+        display: flex;
+        justify-content: space-between; 
+        align-items: center;            
+        width: 100%;                    
+    }
+
+    .footer {
+        position: relative;
+    }
+    .footer img {
+        position: absolute;
+        right: 0; 
+        bottom: -20; 
+        width: 600px; 
+        height: auto; 
+    }
+
+  </style>
 </head>
 <body>
-    <div id="wrap">
-        <div id="wrap-center">
-            <div id="header">
-                <button id="header-logo">
-                    <!-- ::before -->
-                    <img src="favicon.png" alt="깃허브 로고">
-                    <span class="blind">Logo</span>
-                    <!-- ::after -->
-                </button>
-                <button id="header-why">
-                    <!-- ::before -->
-                    <a href="#">Why GitHub?</a>
-                    <svg opacity="0.5" aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-chevron-down HeaderMenu-icon ml-1">
-                        <path d="M12.78 5.22a.749.749 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.06 0L3.22 6.28a.749.749 0 1 1 1.06-1.06L8 8.939l3.72-3.719a.749.749 0 0 1 1.06 0Z"></path>
-                    </svg>
-                    <!-- ::after -->
-                </button>
-                <button id="header-team">
-                    <!-- ::before -->
-                    <a href="#">Team</a>
-                    <!-- ::after -->
-                </button>
-                <button id="header-enterprice">
-                    <!-- ::before -->
-                    <a href="#">Enterprice</a>
-                    <!-- ::after -->
-                </button>
-                <button id="header-explore">
-                    <!-- ::before -->
-                    <a href="#">Explore</a>
-                    <svg opacity="0.5" aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-chevron-down HeaderMenu-icon ml-1">
-                        <path d="M12.78 5.22a.749.749 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.06 0L3.22 6.28a.749.749 0 1 1 1.06-1.06L8 8.939l3.72-3.719a.749.749 0 0 1 1.06 0Z"></path>
-                    </svg>
-                    <!-- ::after -->
-                </button>
-                <button id="header-marketplace">
-                    <!-- ::before -->
-                    <a href="#">Marketplace</a>
-                    <!-- ::after -->
-                </button>
-                <button id="header-pricing">
-                    <!-- ::before -->
-                    <a href="#">Pricing</a>
-                    <svg opacity="0.5" aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-chevron-down HeaderMenu-icon ml-1">
-                        <path d="M12.78 5.22a.749.749 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.06 0L3.22 6.28a.749.749 0 1 1 1.06-1.06L8 8.939l3.72-3.719a.749.749 0 0 1 1.06 0Z"></path>
-                    </svg>
-                    <!-- ::after -->
-                </button>
-                <form action="">
-                    <input id="search-input" type="text" placeholder="Search Github" />
-                    <div id="search-right">
-                        <button href="#" id="search-keyboard">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="20" aria-hidden="true" class="mr-1"><path fill="none" stroke="#979A9C" opacity=".4" d="M3.5.5h12c1.7 0 3 1.3 3 3v13c0 1.7-1.3 3-3 3h-12c-1.7 0-3-1.3-3-3v-13c0-1.7 1.3-3 3-3z"></path><path fill="#5E6062" d="M11.8 6L8 15.1h-.9L10.8 6h1z"></path></svg>
-                            <span class="blind">입력도구</span>
-                        </button>
-                    </div>
-                </form>
-                <button id="header-signin">
-                    <!-- ::before -->
-                    <a href="#">Sign in</a>
-                    <!-- ::after -->
-                </button>
-                <button id="header-signup">
-                    <!-- ::before -->
-                    <a href="#">Sign up</a>
-                    <!-- ::after -->
-                </button>
-            </div>
-            <div id="main">
-                <div id="main-left">
-                    <div id="text1">
-                    <h1>Built for <br> developers</h1>
-                    </div>
-                    <div id="text2">
-                        <p>GitHub is a development platform inspired by the<br>way you work.From <strong><u>open source</u></strong> to <strong><u>business</u></strong>, you<br>can host and review code, manage projects, and<br>build software alongside 50 million developers.</p>
-                    </div>
-                </div>
-                <div id="main-right">
-                    <div id="signup-section">
-                        <label for="username" id="name">Username</label>
-                        <input type="name" id="username">
-                        <label for="email">Email</label>
-                        <input type="email" id="email">
-                        <label for="password">Password</label>
-                        <input type="password" id="password" name="password">
-                        <p id="login-sentence">Make sure it's at least 15 characters OR at least 8 characters including a number and lowercase letter. <a href="#"">Learn more</a>.</p>
-                        <button id="loginbutton" type="button">Sign up for GitHub</button>
-                        <p id="last-sentence">By clicking "Sign up for GitHub", you agree to our <a href="#">Terms of Service</a> and <a href="#">Privacy Statement</a>. We'll occasionally send you account related emails.</p>    
-                    </div>
-                </div>
-            </div>
-
-            <footer>
-                <img src="footer.webp">
-                <div></div>
-                <div class="div2"></div>
-            </footer>
-            
-        </div>
+  <div class="header-section">
+    <div class="nav">
+      <img src="./logo.png" alt="Logo">
+      <div class="menu">
+        <div>Why GitHub?</div>
+        <div>Team</div>
+        <div>Enterprise</div>
+        <div>Explore</div>
+        <div>Marketplace</div>
+        <div>Pricing</div>
+      </div>
+      <div class="search">
+        <input type="text" placeholder="Search GitHub">
+        <button>Sign Up</button>
+      </div>
     </div>
-    <script>
-        const inputs = document.querySelectorAll('#signup-section input');
+  </div>
 
-        inputs.forEach(input => {
-            input.addEventListener('input', () => {
-                if (input.value.trim() !== '') {
-                    input.classList.add('has-value'); /* 값이 있으면 클래스 추가 */
-                } else {
-                    input.classList.remove('has-value'); /* 값이 없으면 클래스 제거 */
-                }
-            });
-        });
-    </script>
+  <div class="content">
+    <div class="text-wrapper">
+      <h1>Built for Developers</h1>
+      <p class="note">
+        GitHub is a development platform inspired by the way you work.
+        From <u>open source</u> to <u>business</u>, you can host and review code,
+        manage projects, and build software alongside 50 million developers.
+      </p>
+    </div>
+    <div class="signup-box">
+      <form>
+        <label>Username</label>
+        <input type="text" placeholder="Enter your username">
+        <label>Email</label>
+        <input type="email" placeholder="Enter your email">
+        <label>Password</label>
+        <input type="password" placeholder="Create a password">
+        <button type="submit">Sign up for GitHub</button>
+      </form>
+      <p class="note2">
+        By clicking "Sign up for GitHub", you agree to our <a href="#">Terms of Service</a> and
+        <a href="#">Privacy Statement</a>. We'll occasionally send you account-related emails.
+      </p>
+    </div>
+  </div>
+
+  <div class="footer">
+    <img src="./footer.png" alt="GitHub Footer">
+  </div>
 </body>
 </html>
