--- a/Javascript 쇼핑몰 미니게임 과제/index.html
+++ b/Javascript 쇼핑몰 미니게임 과제/index.html
@@ -26,11 +26,6 @@
       <button class="btn colorBtn pink">Pink</button>
     </section>
     <!-- Items -->
-    <ul class="items">
-      <li class="item">
-        <img src="img/yellow_p.png" alt="pants" class="item__thumbnail">
-        <span class="item__description">male, large</span>
-      </li>
-    </ul>
+    <ul class="items"></ul>
   </body>
 </html>
