스톱워치 디자인수정

--- a/Javascript 스톱워치 과제/index.html
+++ b/Javascript 스톱워치 과제/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="stopwatch-container">
-        <h1>피로그래밍 스톱워치</h1>
+        <h1>⏱️피로그래밍 스톱워치</h1>
         <div class="stopwatch">
             <div class="time">00:00</div>
             <div class="buttons">
@@ -19,9 +19,10 @@
             </div>
         </div>
         <div class="record-container">
-            <h2>구간 기록</h2>
-            <button class="clear-all-button">기록 전체 삭제</button>
-
+            <div class="record-header">
+                <h2>구간 기록</h2>
+                <button class="clear-all-button">전체삭제🗑️</button>
+            </div>
             <ul class="record-list">
                 <!-- 기록이 여기에 추가됩니다 -->
             </ul>
